--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
-    <string name="app_name">Online Quiz Application</string>
+    <string name="app_name">QuizApplicationFirebase</string>
+    <string name="userMail">Email</string>
+    <string name="userPassword">Password</string>
+    <string name="signIn">Sign In</string>
+    <string name="signUp">Sign Up</string>
+    <string name="mainActivityTitle">Quiz Application</string>
+    <string name="welcomeTagText">Welcome</string>
+    <string name="createAccountTag">Create Account</string>
 </resources>
