--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="userName">Name</string>
     <string name="dashboardWelcomeText">Welcome</string>
     <string name="dashboardUsernameText">UserName</string>
+    <string name="dashboardLogoutText">Log Out</string>
 </resources>
